.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:16:48 **** Rebuild of configuration Debug for project tp3_windows ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
..\Employee.c: In function 'employee_new':
..\Employee.c:5:1: warning: control reaches end of non-void function [-Wreturn-type]
    5 | }
      | ^
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Input.o "..\\Input.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o parser.o "..\\parser.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\tp3_windows" -o tp3_windows.exe Controller.o Employee.o Input.o main.o parser.o -lLinkedList 
Info: Nothing to build for tp3_windows
11:20:50 **** Rebuild of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:41:11: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
   41 |   scanf("%d", option);
      |          ~^   ~~~~~~
      |           |   |
      |           |   int
      |           int *
..\main.c:41:3: warning: 'option' is used uninitialized in this function [-Wuninitialized]
   41 |   scanf("%d", option);
      |   ^~~~~~~~~~~~~~~~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o parser.o "..\\parser.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o main.o parser.o -lLinkedList 
Info: Nothing to build for TP_3
11:21:19 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:46:52: error: 'listaEmpleados' undeclared (first use in this function)
   46 |                 controller_loadFromText("data.csv",listaEmpleados);
      |                                                    ^~~~~~~~~~~~~~
..\main.c:46:52: note: each undeclared identifier is reported only once for each function it appears in
11:21:28 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o main.o parser.o -lLinkedList 
Info: Nothing to build for TP_3
11:27:03 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Input.o "..\\Input.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o parser.o "..\\parser.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o Input.o main.o parser.o -lLinkedList 
11:27:08 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o Input.o main.o parser.o -lLinkedList 
11:27:54 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:25:9: warning: 'option' is used uninitialized in this function [-Wuninitialized]
   25 |         switch(option)
      |         ^~~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Input.o "..\\Input.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o Input.o main.o parser.o -lLinkedList 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file TP_3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:28:06 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o Input.o main.o parser.o -lLinkedList 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file TP_3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:28:08 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o Input.o main.o parser.o -lLinkedList 
11:29:16 **** Incremental Build of configuration Debug for project TP_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Input.o "..\\Input.c" 
gcc "-LC:\\Estudios\\UTN\\Laboratorio-Programación\\eclipse-workspace\\TP_3" -o TP_3.exe Controller.o Employee.o Input.o main.o parser.o -lLinkedList 
